# simple-chat

./: deny.toml  flake.nix  justfile
.githooks/: pre-commit
.github/workflows/: pr_requirements.yml
client/: Cargo.toml
server/: Cargo.toml
shared/: Cargo.toml
