[package]
name = "simple-chat-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
simple-chat-shared = { path = "../shared" }

prost = "0.12"
prost-types = "0.12"
rustls-pemfile = { version = "2", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", optional = true }
tokio-tungstenite = "0.21"

[dev-dependencies]
simple-chat-client = { path = "../client" }
rcgen = "0.13"

[features]
require_tls = ["dep:rustls-pemfile", "dep:tokio-rustls"]
